[package]
name = "tuya-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.2"
tracing = "0.1.37"
reqwest = { version = "0.11.13", features = ["json"] }
sha256 = "1.1.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.12", features = ["full"] } 
hex = "0.4.3"
ring = "0.16.20"
hmac = "0.12.1"
base64 = "0.13.1"
sha2 = "0.10.6"
